style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}
body{
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.img{
    width: 99%;
    margin: auto;
    height: 100vh;
    background-image: url(img/bg.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 40px;
    -moz-box-shadow:    0px 0px 5px 0px #282a2d;
    -webkit-box-shadow: 0px 0px 5px 0px #282a2d;
}
.list{
    height: 70px;
    display: flex;
    width: 90%;
    margin: auto;
    justify-content: space-between;
    align-items: center;
}
.nav{
    display: flex;
}
.img .list .nav p{
    padding-left: 30px;
    padding-right: 30px;
    font-size: 16px;
    font-weight: bold;
}
.logo{
    font-weight: bold;
    font-size: 30px;
}
.talk{
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 20px;
    color: azure;
    border: none;
    font-size: 16px;
    background-color: rgb(41, 41, 201);
}
.box{
    margin-left: 50%;
    width: 50%;
    height: 60vh;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    
}
.title{
    font-size: 120px;
    position: relative;
    top: 100px;
    right: 200px;
    
    
}
.box span{
    color: rgb(41, 41, 201);
    font-size: 120px;
    position: relative;
    top: 90px;
    font-weight: bold;
    right: 300px;
}
.lil{
    font-size: 120px;
    position: relative;
    top: 60px;
    left: 30px;
}
.info{
    
    width: 96%;
    position: relative;
    top: 80px;
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-content: end;
}
.line , .est{
    font-weight: bold;
    font-size: 18px;
    margin-bottom: 8px;
}
.another{
    position: relative;
    right: 190px;
}
.blueContainer{
    
    width: 99%;
    margin: auto;
    background-color: rgb(41, 41, 201);
    border-radius: 40px;
    color: white;
    height: 50vh;
    padding: 30px;
    -moz-box-shadow:    0px 0px 5px 0px #282a2d;
    -webkit-box-shadow: 0px 0px 5px 0px #282a2d;
}
.itemBlue{
    width: 95%;
    margin: auto;
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
}
.usContainer{
    display: flex;
    width: 50%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.aboutUS p{
    font-size: 30px;
}
.esaay{
    
    font-size: 40px;
}
.numContainer{
    width: 100%;
    display: flex;
    margin-top: 20px;
}

.us{
    font-weight: bold;
}
.numContainer p{
    font-size: 10px;
    opacity: 0.5;
}
.numContainer h2{
    font-size: 40px;
}
.numContainer h2, .numContainer p{
    padding-right: 50px;
}
.ourService{
    display: flex;
    justify-content: center;
    padding: 70px;
}
.ourService .our{
    font-size: 70px;
}
.ourService .our i{
    color: rgb(41, 41, 201);
}
.card {
    width: 99%;
    margin: auto;
    border-radius: 40px;
    background-image: url(img/bg.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
    -moz-box-shadow:    0px 0px 5px 0px #282a2d;
    -webkit-box-shadow: 0px 0px 5px 0px #282a2d;

}
.softwareDev  ul li{
    margin-left: 100px;
    font-size: 50px;
}
.arrow img{
    width: 50px;
    
}
.arrow{
    padding: 10px;
    border-radius: 10px;
    
}
/* ----------------------------- */
 /*  our work */
 /* ---------------------------- */
.displayImage{
    display: flex;
    width: 99%;
    margin: auto;
    border-radius: 40px;
    justify-content: space-between;
    background-color: rgba(245,245,245,255);
}
.displayImage .rub{
    padding: 20px;
    width: 50%;
}
.displayImage .coffee{
    border-radius: 40px;
    width: 700px;
}
.displayImage .ASOR{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    position: relative;
    bottom: 140px;
    left: -220px;
}

.displayImage .ASOR .asor1{
    font-size: 32px;
    font-weight: bold;
    padding-bottom: 20px;
}
.displayImage .icon{
    position: relative;
    left: -20px;
    bottom: -30px;
}
.displayImage.revers{
    flex-direction: row-reverse;
}
.ASOR.Sec{
    left: -200px;
}
.icon.Mode{
    left: 600px;
}
/* ======Footer======= */
.footer{
    width: 99%;
    height: 100vh;
    margin: auto;
    background-color: black;
    border-radius: 40px;
    color: white;
    -moz-box-shadow:    0px 0px 5px 0px #282a2d;
    -webkit-box-shadow: 0px 0px 5px 0px #282a2d;
}
.bigContainer{
    height: 30vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.bigContainer .muyTeat{
    display: flex;
    align-items: center;
    width: 90%;
    margin: auto;
    justify-content: space-between;
}
.bigContainer .muyTeat .text{
    font-size: 150px;
}
.bigContainer .muyTeat .pocket2{
    position: relative;
    left: -50px;
    bottom: -25px;
}
.bigContainer .muyTeat .B{
    
    color: rgb(187, 179, 167);
}
.bigContainer .muyTeat .bold{
    font-size: 40px;
}
.bigContainer .letTalk{
    display: flex;
    width: 90%;
    margin: auto;
    justify-content: space-between;
}
.bigContainer .okay{
    background: rgb(41, 41, 201);
    width: 400px;
    height: 400px;
    border-radius: 50%;
    border: none;
    color: aliceblue;
    font-size: 80px;
}
.bigContainer .to{
    font-size: 150px;
    position: relative;
    left: -200px;
}
.bigContainer.cry{
    display: flex;
    width: 80%;
    margin-left: 20%;
    flex-direction: row;
    position: relative;
    bottom: -200px;
    
}
.bigContainer.cry .navfoot1, .navfoot2{
    display: flex;
    color: rgb(149, 149, 149);
    position: relative;
    
}
.bigContainer.cry .navfoot1 .navFootLink, .navFootLinks{
    padding-left: 30px;
    padding-right: 30px;
    padding-top: -10px;
    position: relative;
}
.bigContainer.cry .navfoot2{
    position: relative;
    left: -100px;
}

